# minisearch

./: Cargo.toml  README.md
benches/: indexing.rs  search.rs
datasets/: mini-movies.json
src/: api.rs  index.rs  lib.rs  main.rs  tokenizer.rs
src/indexes/: heed.rs  mod.rs  naive.rs  naive_indexer.rs  roaring.rs  sled.rs  sqlite.rs
