[package]
name = "minisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
roaring = "0.9.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
tokio = { version = "1.20.0", features = ["tokio-macros", "macros", "fs", "sync", "rt-multi-thread"] }
