[package]
name = "minisearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["http2"] }
deunicode = "1.3.1"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
roaring = { git = "https://github.com/irevoire/roaring-rs", branch = "serde", features = ["serde"] }
rusqlite = "0.28.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82", features = ["preserve_order"] }
sled = "0.34.7"
heed = "0.11.0"
tokio = { version = "1.20.0", features = ["tokio-macros", "macros", "fs", "sync", "rt-multi-thread"] }

[dev-dependencies]
big_s = "1.0.2"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false
